{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "0f9bd370-db69-45b1-a863-6e3da6fafd52",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "a58f583d-4186-4792-a0dc-eca5d45157ec",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "570d4069-7da6-436b-b039-aeebda0342a2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "042c51c8-27ff-467b-8930-eb31e3e166a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "042db60d-e547-416d-ab1d-a048261c3f6c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2585b266-7417-4ac0-8162-79a56b82f585",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QuestMenuOpen",
                    "type": "Button",
                    "id": "70adcf12-20ac-4b23-8607-af2f9171c3e3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "QuestMenuClose",
                    "type": "Button",
                    "id": "d42f8754-0b21-4d62-a621-5e49139502cb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "ba0a3bee-e25d-474e-a268-1a3dd3d8f461",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4a30906c-2497-4be1-92df-7a1c22c372db",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a3614d4f-8392-4798-9fee-2fd2a848ca60",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobiles",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "b4307bcc-2658-4356-bbfc-4948df3dd6b8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b2cd58ec-7d8f-4b6b-aec1-9d36968e714a",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3a8d11f8-ca35-41a5-a3ac-b75a8075fa49",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6835288c-829a-4bec-ab8f-d8df375013c6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1ce62902-6024-490c-8673-276ca3c3f21f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "98d64962-7a83-4433-9fd0-cb912ab8866e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "17b2e818-03a8-41c2-a861-4faf36437e0e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b95285-ad6c-43cf-afdd-ebeff452c146",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "261e9156-7f69-4fec-9ec2-4beb35e93d0a",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "QuestMenuOpen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30068a60-d5f6-4fc9-854a-7a8e8ea822d9",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "QuestMenuClose",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d527185-7a2e-4933-ace5-84d192a8e775",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and mouse",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and mouse",
            "bindingGroup": "Keyboard and mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobiles",
            "bindingGroup": "Mobiles",
            "devices": []
        }
    ]
}